added  links in nav bar

--- a/week-1/22-Stu_Mini-Project/index.html
+++ b/week-1/22-Stu_Mini-Project/index.html
@@ -11,25 +11,22 @@
     <header>
       <nav>
         <div>
-          <a href=""></a>
+          <a href="#banner">Banner</a>
         </div>
         <div>
-          <a href=""></a>
-        </div>
-        <div>
-          <a href=""></a>
+          <a href="#contact">Contact</a>
         </div>
       </nav>
     </header>
     <main>
-      <section>
+      <section id="#contact">
         <h1></h1>
         <figure>
           <img src="" alt="" />
           <figcaption></figcaption>
         </figure>
       </section>
-      <section>
+      <section id="contact">
         <h2></h2>
         <form action="">
           <input type="text" />
