--- a/week-1/22-Stu_Mini-Project/index.html
+++ b/week-1/22-Stu_Mini-Project/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <section id="#contact">
-        <h1></h1>
+        <h1>Coding Bootcamp</h1>
         <figure>
           <img src="" alt="" />
           <figcaption></figcaption>
