changed fig camption

--- a/week-1/22-Stu_Mini-Project/index.html
+++ b/week-1/22-Stu_Mini-Project/index.html
@@ -22,8 +22,11 @@
       <section id="#contact">
         <h1>Coding Bootcamp</h1>
         <figure>
-          <img src="" alt="" />
-          <figcaption></figcaption>
+          <img
+            src="./assets/images/landing-page-image.jpeg"
+            alt="People around a laptop"
+          />
+          <figcaption>Happy Campers</figcaption>
         </figure>
       </section>
       <section id="contact">
