changed inputs to placeholders

--- a/week-1/22-Stu_Mini-Project/index.html
+++ b/week-1/22-Stu_Mini-Project/index.html
@@ -32,8 +32,8 @@
       <section id="contact">
         <h2></h2>
         <form action="">
-          <input type="text" />
-          <input type="text" />
+          <input type="text" placeholder="Enter your name" />
+          <input type="text" placeholder="Enter your email" />
           <div>
             <button></button>
           </div>
