--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
@@ -21,7 +21,7 @@
     <section>
       <img src="./assets/images/image-1.png" alt="box with number 1" />
       <img src="./assets/images/image-2.png" alt="box with number 2" />
-      <img src="./assets/images/image-2.png" alt="box with number " />
+      <img src="./assets/images/image-2.png" alt="box with number 3" />
       <img
         id="image-3"
         src="./assets/images/image-3.png"
