--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -12,3 +12,31 @@
   </body>
 
 </html>
+
+<header>
+  <!--The h1 tag should be used for the most important heading-->
+  <h1>Student Bio</h1>
+    </header>
+
+    <!-- Section 1: Bio -->
+    <section>
+      <h2>Jonathan Jefferies</h2>
+      <!-- Image -->
+      <img src="https://via.placeholder.com/200" alt="Your Name"/>
+      <!-- Paragraph with embedded link -->
+      <p>Write a short paragraph or two about yourself</p>
+    </section>
+
+    <!-- Section 2: Contact Info -->
+    <section>
+      <h2>Contact Info</h2>
+      <!-- Unordered list -->
+      <ul>
+        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+    </section>
+  </body>
+
+</html>
