changed html layout

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Student Bio</title>
   </head>
 
   <body>
-    <!-- TODO: Write Your Code Below-->
-
-  </body>
-
-</html>
-
-<header>
-  <!--The h1 tag should be used for the most important heading-->
-  <h1>Student Bio</h1>
+    <header>
+      <h1>Student Bio</h1>
     </header>
 
-    <!-- Section 1: Bio -->
     <section>
       <h2>Jonathan Jefferies</h2>
-      <!-- Image -->
-      <img src="https://via.placeholder.com/200" alt="Your Name"/>
-      <!-- Paragraph with embedded link -->
+
+      <img src="https://via.placeholder.com/200" alt="Your Name" />
+
       <p>Write a short paragraph or two about yourself</p>
     </section>
 
-    <!-- Section 2: Contact Info -->
     <section>
       <h2>Contact Info</h2>
-      <!-- Unordered list -->
+
       <ul>
         <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">sampleName</a></li>
@@ -38,5 +28,4 @@
       </ul>
     </section>
   </body>
-
 </html>
