entered details on Unorderd List lines 25-33

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -22,9 +22,15 @@
       <h2>Contact Info</h2>
 
       <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        <li>
+          <strong>Email:</strong>
+          <a href="#">jonathanjefferies1985@gmail.com</a>
+        </li>
+        <li><strong>Github:</strong> <a href="#">jj77847</a></li>
+        <li>
+          <strong>Portfolio:</strong>
+          <a href="#">https://codepen.io/JJ77847/pen/dyWEKbj</a>
+        </li>
       </ul>
     </section>
   </body>
