updated <p> info lines 18-22

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -15,7 +15,11 @@
 
       <img src="https://via.placeholder.com/200" alt="Your Name" />
 
-      <p>Write a short paragraph or two about yourself</p>
+      <p>
+        I have been trying to change career into coding with the use of mainly
+        courses on basic HTML, CSS and Python. Using FreeCodeCamp.com and
+        Futurelearn.com.
+      </p>
     </section>
 
     <section>
