--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -16,9 +16,12 @@
       <img src="https://via.placeholder.com/200" alt="Your Name" />
 
       <p>
-        I have been trying to change career into coding with the use of mainly
-        courses on basic HTML, CSS and Python. Using FreeCodeCamp.com and
-        Futurelearn.com.
+        I have been trying to code with the use of mainly courses on the basics
+        HTML, CSS and Python.
+      </p>
+      <p>
+        I have been using mainly FreeCodeCamp.com and Futurelearn.com as
+        resources.
       </p>
     </section>
 
