added color css inline style to p tags and h2 tag

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -11,16 +11,16 @@
     </header>
 
     <section>
-      <h2>Jonathan Jefferies</h2>
+      <h2 style="color: blue">Jonathan Jefferies</h2>
 
       <img src="https://via.placeholder.com/200" alt="Your Name" />
 
-      <p>
-        I have been trying to code with the use of mainly courses on the basics
-        HTML, CSS and Python.
+      <p style="color: red">
+        > I have been trying to code with the use of mainly courses on the
+        basics HTML, CSS and Python.
       </p>
-      <p>
-        I have been using mainly FreeCodeCamp.com and Futurelearn.com as
+      <p style="color: greenyellow">
+        > I have been using mainly FreeCodeCamp.com and Futurelearn.com as
         resources.
       </p>
     </section>
