changed photo to jonny.img added alt also

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -13,7 +13,10 @@
     <section>
       <h2 style="color: blue">Jonathan Jefferies</h2>
 
-      <img src="https://via.placeholder.com/200" alt="Your Name" />
+      <img
+        src="/Users/jonathanjefferies/coding_bootcamp/classroom/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/assets/jonny.jpeg"
+        alt="Jonathan Jefferies Photo"
+      />
 
       <p style="color: red">
         > I have been trying to code with the use of mainly courses on the
