added style css inline for centering website

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -3,6 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Student Bio</title>
+    <style>
+      h1 {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+      div {
+        text-align: center;
+      }
+      section {
+        text-align: center;
+      }
+      img {
+        text-align: center;
+      }
+      ul {
+        text-align: center;
+      }
+    </style>
   </head>
 
   <body>
