--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -7,6 +7,9 @@
       h1 {
         text-align: center;
       }
+      h2 {
+        text-align: center;
+      }
       p {
         text-align: center;
       }
