deleted errors in p tags

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -45,11 +45,11 @@
       />
 
       <p style="color: red">
-        > I have been trying to code with the use of mainly courses on the
-        basics HTML, CSS and Python.
+        I have been trying to code with the use of mainly courses on the basics
+        HTML, CSS and Python.
       </p>
       <p style="color: greenyellow">
-        > I have been using mainly FreeCodeCamp.com and Futurelearn.com as
+        I have been using mainly FreeCodeCamp.com and Futurelearn.com as
         resources.
       </p>
     </section>
