changed order of strong tags

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -48,7 +48,7 @@
         I have been trying to code with the use of mainly courses on the basics
         HTML, CSS and Python.
       </p>
-      <p style="color: greenyellow">
+      <p style="color: rgb(118, 181, 25)">
         I have been using mainly FreeCodeCamp.com and Futurelearn.com as
         resources.
       </p>
@@ -59,13 +59,16 @@
 
       <ul>
         <li>
+          <strong>Portfolio:</strong>
+          <a href="#">https://codepen.io/JJ77847/pen/dyWEKbj</a>
+        </li>
+        <li>
           <strong>Email:</strong>
           <a href="#">jonathanjefferies1985@gmail.com</a>
         </li>
-        <li><strong>Github:</strong> <a href="#">jj77847</a></li>
         <li>
-          <strong>Portfolio:</strong>
-          <a href="#">https://codepen.io/JJ77847/pen/dyWEKbj</a>
+          <strong>Github:</strong>
+          <a href="#">jj77847</a>
         </li>
       </ul>
     </section>
