changed img height and width

--- a/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/Unsolved/index.html
@@ -8,7 +8,8 @@
         size: 24px;
       }
       img {
-        size: 50%;
+        width: 200px;
+        height: 200px;
       }
       ul {
         size: 24px;
