changed outline of html and added css style

--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
-    <meta charset="UTF-8">
-    <title>Student Bio With Attributes</title>
-    <!-- Link to stylesheet using rel and href attributes -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8" />
+    <title>Student Bio</title>
   </head>
 
   <body>
     <header>
       <h1>Student Bio</h1>
     </header>
-    <!-- TODO: add class attribute -->
+
     <section>
-      <h2>Your Name</h2>
-      <!-- TODO: modify img attributes -->
-      <img src="https://via.placeholder.com/200" alt="Your Name">
-      <p>Write a short paragraph or two about yourself</p>
+      <h2 style="color: blue">Jonathan Jefferies</h2>
+
+      <img
+        src="/Users/jonathanjefferies/coding_bootcamp/classroom/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/assets/jonny.jpeg"
+        alt="Jonathan Jefferies Photo"
+      />
+
+      <p style="color: red">
+        I have been trying to code with the use of mainly courses on the basics
+        HTML, CSS and Python.
+      </p>
+      <p style="color: rgb(118, 181, 25)">
+        I have been using mainly FreeCodeCamp.com and Futurelearn.com as
+        resources.
+      </p>
     </section>
-    <!-- TODO: add class attribute -->
+
     <section>
       <h2>Contact Info</h2>
+
       <ul>
-        <!-- TODO: add id attribute -->
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <!-- TODO: add id attribute -->
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-        <!-- TODO: add id attribute -->
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        <li>
+          <strong>Portfolio:</strong>
+          <a href="#">https://codepen.io/JJ77847/pen/dyWEKbj</a>
+        </li>
+        <li>
+          <strong>Email:</strong>
+          <a href="#">jonathanjefferies1985@gmail.com</a>
+        </li>
+        <li>
+          <strong>Github:</strong>
+          <a href="#">jj77847</a>
+        </li>
       </ul>
     </section>
   </body>
-
 </html>
