rereading Readme.md made style and layout changes

--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
@@ -11,18 +11,18 @@
     </header>
 
     <section>
-      <h2 style="color: blue">Jonathan Jefferies</h2>
+      <h2>Jonathan Jefferies</h2>
 
       <img
         src="/Users/jonathanjefferies/coding_bootcamp/classroom/01-HTML-Git-CSS/01-Activities/day-02/06-Stu_HTML/assets/jonny.jpeg"
         alt="Jonathan Jefferies Photo"
       />
 
-      <p style="color: red">
+      <p>
         I have been trying to code with the use of mainly courses on the basics
         HTML, CSS and Python.
       </p>
-      <p style="color: rgb(118, 181, 25)">
+      <p>
         I have been using mainly FreeCodeCamp.com and Futurelearn.com as
         resources.
       </p>
