--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Student Bio</title>
   </head>
 
