--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes_Maybe/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes_Maybe/Unsolved/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- _CSS_linking_Problem seems to be not actioning Css? -->
     <title>Student Bio</title>
   </head>
 
