--- a/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
@@ -11,15 +11,15 @@
       <h2>Section 1</h2>
     </section>
 
-    <section class="section section-blue">
+    <section class="section" id="section-blue">
       <h2>Section 2</h2>
     </section>
 
-    <section class="section section-blue">
+    <section class="section" id="section-blue">
       <h2>Section 3</h2>
     </section>
 
-    <div class="container">
+    <div class="container" id="container">
       <section>
         <h2>Section 4</h2>
       </section>
