added class selectors and css sections

--- a/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
@@ -11,11 +11,11 @@
       <h2>Section 1</h2>
     </section>
 
-    <section class="section" id="section-blue">
+    <section class="section" id="section-2">
       <h2>Section 2</h2>
     </section>
 
-    <section class="section" id="section-blue">
+    <section class="section" id="section-3">
       <h2>Section 3</h2>
     </section>
 
@@ -24,11 +24,11 @@
         <h2>Section 4</h2>
       </section>
 
-      <section>
+      <section class="section" id="section-5">
         <h2>Section 5</h2>
       </section>
 
-      <section id="section-6">
+      <section id="section-6" id="section-6">
         <h2>Section 6</h2>
       </section>
     </div>
