added div class and container ids

--- a/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/index.html
@@ -20,14 +20,16 @@
     </section>
 
     <div class="container" id="container">
-      <section>
+      <section class="section" id="section-4">
         <h2>Section 4</h2>
       </section>
-
+    
+    <div class="container" id="container">
       <section class="section" id="section-5">
         <h2>Section 5</h2>
       </section>
 
+    <div class="container" id="container">
       <section id="section-6" id="section-6">
         <h2>Section 6</h2>
       </section>
