--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Units and Fonts</title>
   </head>
 
@@ -13,7 +13,7 @@
 
     <section class="section">
       <h2>Baby Spiders</h2>
-      <p>A baby spider is called a spiderling 🕷️. </p>
+      <p>A baby spider is called a spiderling 🕷️.</p>
     </section>
 
     <section class="section">
@@ -23,8 +23,9 @@
 
     <section class="section">
       <h2>Powerful Squirrels</h2>
-      <p id="fact-3">Approximately 10-20% of US power outages 🔌 are caused by squirrels 🐿️.</p>
+      <p id="fact-3">
+        Approximately 10-20% of US power outages 🔌 are caused by squirrels 🐿️.
+      </p>
     </section>
   </body>
-
 </html>
