input p tags content

--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
@@ -13,18 +13,18 @@
 
     <section class="section">
       <h2>Baby Spiders</h2>
-      <p>A baby spider is called a spiderling 🕷️.</p>
+      <p>A baby spider is called a spiderling.</p>
     </section>
 
     <section class="section">
       <h2>Beds</h2>
-      <p id="fact-2">The word "bed" looks like a bed 🛏️.</p>
+      <p id="fact-2">The word "bed" looks like a bed</p>
     </section>
 
     <section class="section">
       <h2>Powerful Squirrels</h2>
       <p id="fact-3">
-        Approximately 10-20% of US power outages 🔌 are caused by squirrels 🐿️.
+        Approximately 10-20% of US power outages are caused by squirrels.
       </p>
     </section>
   </body>
