--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
@@ -16,7 +16,7 @@
       <p>A baby spider is called a spiderling.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="section-beds">
       <h2>Beds</h2>
       <p id="fact-2">The word "bed" looks like a bed</p>
     </section>
