added ids to sections class

--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/index.html
@@ -13,17 +13,17 @@
 
     <section class="section" id="section-baby_spiders">
       <h2>Baby Spiders</h2>
-      <p>A baby spider is called a spiderling.</p>
+      <p id="fact-1" class="fact-1">A baby spider is called a spiderling.</p>
     </section>
 
     <section class="section" id="section-beds">
       <h2>Beds</h2>
-      <p id="fact-2">The word "bed" looks like a bed</p>
+      <p id="fact-2" class="fact-2">The word "bed" looks like a bed</p>
     </section>
 
     <section class="section" id="section-powerful_squirrels">
       <h2>Powerful Squirrels</h2>
-      <p id="fact-3">
+      <p id="fact-3" class="fact-3">
         Approximately 10-20% of US power outages are caused by squirrels.
       </p>
     </section>
