added comments to line 6

--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font-Maybe/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font-Maybe/Unsolved/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- unablt to see css changes problems linking the two. -->
     <title>Units and Fonts</title>
   </head>
 
