--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
@@ -23,6 +23,16 @@
       <img src="./assets/images/image-2.png" alt="box with number 2" />
       <img src="./assets/images/image-2.png" alt="box with number 3" />
       <img
+        id="image-1"
+        src="./assets/images/image-1.png"
+        alt="box with number 1"
+      />
+      <img
+        id="image-2"
+        src="./assets/images/image-2.png"
+        alt="box with number 2"
+      />
+      <img
         id="image-3"
         src="./assets/images/image-3.png"
         alt="box with number 3"
