--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
@@ -11,9 +11,9 @@
       <h2>HTML Display</h2>
       <nav>
         <ul>
-          <li id="item-1">LIST ITEM 1</li>
-          <li id="item-2">LIST ITEM 2</li>
-          <li id="item-3">LIST ITEM 3</li>
+          <li id="item-1" class="item-1">LIST ITEM 1</li>
+          <li id="item-2" class="item-2">LIST ITEM 2</li>
+          <li id="item-3" class="item-3">LIST ITEM 3</li>
         </ul>
       </nav>
     </header>
