added inline block

--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
@@ -11,9 +11,9 @@
       <h2>HTML Display</h2>
       <nav>
         <ul>
-          <li id="item-1" class="item-1">LIST ITEM 1</li>
-          <li id="item-2" class="item-2">LIST ITEM 2</li>
-          <li id="item-3" class="item-3">LIST ITEM 3</li>
+          <li id="item-1">LIST ITEM 1</li>
+          <li id="item-2">LIST ITEM 2</li>
+          <li id="item-3">LIST ITEM 3</li>
         </ul>
       </nav>
     </header>
@@ -22,21 +22,6 @@
       <img src="./assets/images/image-1.png" alt="box with number 1" />
       <img src="./assets/images/image-2.png" alt="box with number 2" />
       <img src="./assets/images/image-3.png" alt="box with number 3" />
-      <img
-        id="image-1"
-        src="./assets/images/image-1.png"
-        alt="box with number 1"
-      />
-      <img
-        id="image-2"
-        src="./assets/images/image-2.png"
-        alt="box with number 2"
-      />
-      <img
-        id="image-3"
-        src="./assets/images/image-3.png"
-        alt="box with number 3"
-      />
     </section>
   </body>
 </html>
