--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/index.html
@@ -19,9 +19,17 @@
     </header>
 
     <section>
-      <img src="./assets/images/image-1.png" alt="box with number 1" />
-      <img src="./assets/images/image-2.png" alt="box with number 2" />
-      <img src="./assets/images/image-3.png" alt="box with number 3" />
+      <div class="middle-column">
+        <div id="image-1">
+          <img src="./assets/images/image-1.png" alt="box with number 1" />
+        </div>
+        <div id="image-2">
+          <img src="./assets/images/image-2.png" alt="box with number 2" />
+        </div>
+        <div id="image-3">
+          <img src="./assets/images/image-3.png" alt="box with number 3" />
+        </div>
+      </div>
     </section>
   </body>
 </html>
