updated css link

--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes_Maybe/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes_Maybe/Unsolved/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <!-- _CSS_linking_Problem seems to be not actioning Css? -->
     <title>Student Bio</title>
   </head>
