--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font-Maybe/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font-Maybe/Unsolved/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
     <!-- unablt to see css changes problems linking the two. -->
     <title>Units and Fonts</title>
   </head>
