--- a/03-Mini-Project-RPS/index.html
+++ b/03-Mini-Project-RPS/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock Paper Sissors Game</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Rock Paper Sissors</h1>
+    <script src="./assets/js/game.js"></script>
+  </body>
 </html>
